[project]
name = "projeto_02"
version = "0.1.0"
description = "atividade de backend"
authors = [
    {name = "Luiz Eduardo", email = "luizeduardocabraldarosa@gmail.com"},
]
dependencies = ["django>=5.1.6", "djangorestframework>=3.15.2"]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
